feat: implementar inventario y ventas multisucursal